# ai-400

./: .gitignore
task-management-api/: .gitignore  CLAUDE.md  PROJECT_MAP.md  README.md  pyproject.toml
task-management-api/.claude/: settings.local.json
task-management-api/.claude/skills/fastapi-developer/: EXAMPLES.md  REFERENCE.md  SKILL.md
task-management-api/.claude/skills/fastapi-developer/templates/: STRUCTURE.md  config.py  database.py  main.py  minimal.py
task-management-api/.claude/skills/pytest-developer/: EXAMPLES.md  REFERENCE.md  SKILL.md
task-management-api/.claude/skills/pytest-developer/templates/: conftest.py.template  test_api.py.template  test_service.py.template
task-management-api/.claude/skills/skill-maker/: SKILL.md
task-management-api/.claude/skills/sqlmodel-developer/: EXAMPLES.md  REFERENCE.md  SKILL.md
task-management-api/.claude/skills/sqlmodel-developer/templates/: alembic_env.py.template  base_model.py.template  crud_operations.py.template  database_setup.py.template  fastapi_router.py.template  relationship_models.py.template  test_fixtures.py.template
task-management-api/app/: config.py  database.py  main.py
task-management-api/app/models/: __init__.py  task.py
task-management-api/app/routers/: tasks.py
task-management-api/tests/: conftest.py  test_tasks.py
